@@ -7,6 +7,7 @@ namespace balancedbanana {
 }
 
 #include <communication/messageProcessor/MessageProcessor.h>
+#include <string>
 
 class balancedbanana::communication::Message {
 protected:
