@@ -6,7 +6,7 @@ namespace balancedbanana {
     namespace database {
 
 		struct job_result {
-			std::string stdout;
+			std::string _stdout;
 
 			int8_t exit_code;
 
