@@ -1,10 +1,13 @@
 #include <communication/authenticator/AuthHandler.h>
+#include <memory>
+#include <stdexcept>
 #include <openssl/rsa.h>
 #include <openssl/pem.h>
 
 using namespace balancedbanana::communication::authenticator;
+using IUser = balancedbanana::scheduler::IUser;
 
-void AuthHandler::publickeyauthenticate(const std::shared_ptr<scheduler::IUser>& user, const std::string& signature) {
+void AuthHandler::publickeyauthenticate(const std::shared_ptr<IUser>& user, const std::string& signature) {
     // Free structs automatically
     struct _guard
     {
