@@ -8,12 +8,15 @@ using namespace balancedbanana::database;
 
 //Creates a Job object.
 Job Factory::createJob(const job_details) {
+    return {};
 }
 
 //Creates a Worker object.
 Worker Factory::createWorker(const worker_details) {
+    return {};
 }
 
 //Creates a User object.
 User Factory::createUser(const user_details) {
+    return {};
 }
